Storage Service: Check that a list is not empty before taking its first element.

BUG: 323677
FIXED-IN: 4.11.1
REVIEW: 112323